# mqtt-to-lirc

./: .gitignore  CMakeLists.txt  configuration.conf  download-libs.sh  remote.cpp
